# microphone-library-for-pico

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
examples/usb_microphone/: CMakeLists.txt  commandline.c  commandline.h  debug_pulse.c  debug_pulse.h  eq.py  equalizer.h  main.c  test_equalizer.c  tusb_config.h  usb_descriptors.c  usb_microphone.c  usb_sync.c  usb_sync.h
src/: pdm_microphone.c  pdm_microphone.pio
src/OpenPDM2PCM/: OpenPDMFilter.c  OpenPDMFilter.h
src/include/pico/: pdm_microphone.h
